--- a/src/App.css
+++ b/src/App.css
@@ -1,17 +1,13 @@
-.App {
+/* .App {
   text-align: center;
-}
+} */
 
 .App-logo {
   height: 40vmin;
   pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
+
 
 .App-header {
   background-color: #282c34;
@@ -24,15 +20,43 @@
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+
+
+.App {
+  font-family: sans-serif;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+span {
+  border: 1px solid red;
+  background: radial-gradient(black, transparent);
+}
+
+.photo-container {
+  position: relative;
+}
+
+.gray-backdrop {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: gray;
+  opacity: 0.5;
+  /* Set backdrop opacity to 50% */
+}
+
+.photo {
+  position: relative;
+  width: 100%;
+  opacity: 0;
+  /* Hide photo by default */
+}
+
+.selectable-area {
+  background-color: transparent;
+}
+
+.blue-box {
+  z-index: 1;
 }
